MULE-10137: Allow AnnotationBasedDescriber to work with AST trees